исправлены мелкие ошибки